Document/Grammar.txt
init ::= instructions

instructions ::= instructions instruction
                |instruction

instruction ::= Statement ptcommaP
               |Assignment ptcommaP
               |Print ptcommaP
               |Functions

Statement ::= res_var tk_id StatementP 

StatementP ::= tk_igual Expression
              |  

Assignment ::= tk_id tk_igual Expresion

Functions ::= Function_Main

Function_Main ::= res_main tk_par_o tk_par_c tk_key_o instructions tk_key_c

ptcommaP ::= tk_ptcomma
            | 



value ::= { list_expr }

list_expr ::= list_expr , expr
            | expr

expr :: = value
         | num   


Expression ::= Expression + Expression
              |Expression - Expression
              |tk_entero
              |tk_decimal
              |tk_cadena
              |tk_char
              |res_true
              |res_false  
            
